--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -9,10 +9,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive  # <--- CRITICAL for PaperMod
+          fetch-depth: 0         # Recommended for Hugo 'Lastmod' features
 
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v3 # Updated to v3
         with:
           hugo-version: 'latest'
           extended: true
@@ -21,7 +25,7 @@ jobs:
         run: hugo --minify
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4 # Updated to v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
